Bug 382247. JAWS says submenu for ARIA menuitems with a text node child. r=simon.bates, a=dsicore